<resources>
    <string name="app_name">encontraUNIR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_espacos">Espaços</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_pos">Pós-Graduação</string>
    <string name="menu_reitorias">Pró-Reitorias</string>
    <string name="menu_sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
